Moved bucket and path before optional GCP credentials

--- a/force/pom.xml
+++ b/force/pom.xml
@@ -218,6 +218,7 @@
             <Embed-Directory>lib</Embed-Directory>
             <!--Only @Plugin classes in the export packages will be included as plugin-->
             <_exportcontents>
+              co.cask.cdap.etl.api.action.*;
               com.google.cdap.*;
               org.codehaus.jackson.*;
               com.google.cloud.*;
